intro section done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                     </ul>
                 </nav>
             </header>
+
+            <div class="intro">
+                <div class="wrap">
+                    <h1>Lorem ipsum dolor sit amet, consectetur</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Augue et eros, pellentesque et. Tristique ullamcorper ac pharetra in nisi sit vivamus lorem.</p>
+                    <a href="#" class="get-started-button">Get started</a>
+                </div>
+            </div>
+
         </div>    
     </div>
     
