third section completed

--- a/index.html
+++ b/index.html
@@ -101,6 +101,40 @@
                     </div>
                 </div>
             </div>
+
+           <div class="third-section">
+                <div class="headings-wrapper">
+                    <h2>MOT consectet</h1>
+                    <h3>amet,consectet</h3>
+                </div>
+                <div class="wrap">
+                    <div class="inner-box first-inner-box">
+                        <div class="services-img-container">
+                            <img src="python.png" alt="">
+                        </div>
+                        <span class="card-heading"><span>mot</span> consectet</span>
+                        <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
+                    </div>
+                    
+                    <div class="inner-box second-inner-box">
+                        <div class="services-img-container">
+                            <img src="iost-(iost).png" alt="">
+                        </div>
+                        <span class="card-heading"><span>mot</span> consectet</span>
+                        <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
+                    </div>
+
+                    <div class="inner-box third-inner-box">
+                        <div class="services-img-container">
+                            <img src="stacks-(stx).png" alt="">
+                        </div>
+                        <span class="card-heading"><span>mot</span> consectet</span>
+                        <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
+                    </div>
+
+                </div>    
+           </div> 
+
         </div>    
     </div>
     
