Mobile version done

--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                         </div>
                     </div>
 
-                    <div class="company-container">
+                    
+                    <div class="company-support-container">
                         <div class="company">
                             <span>Company</span>
                             <ul>
@@ -239,7 +240,7 @@
                             </ul>
                         </div>
                         <div class="support">
-                            <span>SUPPORT</span>
+                            <span>Support</span>
                             <ul>
                                 <li>Lorem ipsum 6</li>
                                 <li>Lorem ipsum 7</li>
@@ -252,8 +253,8 @@
 
                     <div class="send-message-container">
                         <span class="send-msg">Send message</span>
-                        <input type="text" name="text" id="text">
-                        <a href="#" class="get-started-button">Send MEssage</a>
+                        <input type="email" name="email" id="email" placeholder="Your email address">
+                        <a href="#" class="get-started-button">Send Message</a>
                     </div>
 
                 </div>   
