--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="send-message-container">
                         <span class="send-msg">Send message</span>
                         <input type="email" name="email" id="email" placeholder="Your email address">
-                        <a href="#" class="get-started-button">Send Message</a>
+                        <a href="#" class="get-started-button send-message-button">Send Message</a>
                     </div>
 
                 </div>   
